# google-java-format-hook

./: .pre-commit-hooks.yaml  README.md  format.py  format.sh  pyproject.toml
.github/: dependabot.yml
.github/workflows/: python-app.yml
google_java_format_hook/: format.py
tests/: test_format.py
