[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "google-java-format-hook"
version = "1.24.0"
description = "Pre-commit hook for google-java-format"
authors = [{name = "Avi Sanwal"}]
requires-python = ">=3.7"

[project.scripts]
google-java-format-hook = "google_java_format_hook.format:main"
